# charmm36

./: README.md
test/: CMakeLists.txt  compare_energies.py  test_charmm.cpp  test_charmm36.cpp  test_ff.cpp
test/deca/: clean_AAAAAAAAAAAA.charmm  clean_AAAAAAAAAAAA.phaistos  clean_ACCCCCCCCCCA.charmm  clean_ACCCCCCCCCCA.phaistos  clean_ADDDDDDDDDDA.charmm  clean_ADDDDDDDDDDA.phaistos  clean_AEEEEEEEEEEA.charmm  clean_AEEEEEEEEEEA.phaistos  clean_AFFFFFFFFFFA.charmm  clean_AFFFFFFFFFFA.phaistos  clean_AGGGGGGGGGGA.charmm  clean_AGGGGGGGGGGA.phaistos  clean_AHHHHHHHHHHA.charmm  clean_AHHHHHHHHHHA.phaistos  clean_AIIIIIIIIIIA.charmm  clean_AIIIIIIIIIIA.phaistos  clean_AKKKKKKKKKKA.charmm  clean_AKKKKKKKKKKA.phaistos  clean_ALLLLLLLLLLA.charmm  clean_ALLLLLLLLLLA.phaistos  clean_AMMMMMMMMMMA.charmm  clean_AMMMMMMMMMMA.phaistos  clean_ANNNNNNNNNNA.charmm  clean_ANNNNNNNNNNA.phaistos  clean_APPPPPPPPPPA.charmm  clean_APPPPPPPPPPA.phaistos  clean_AQQQQQQQQQQA.charmm  clean_AQQQQQQQQQQA.phaistos  clean_ARRRRRRRRRRA.charmm  clean_ARRRRRRRRRRA.phaistos  clean_ASSSSSSSSSSA.charmm  clean_ASSSSSSSSSSA.phaistos  clean_ATTTTTTTTTTA.charmm  clean_ATTTTTTTTTTA.phaistos  clean_AVVVVVVVVVVA.charmm  clean_AVVVVVVVVVVA.phaistos  clean_AWWWWWWWWWWA.charmm  clean_AWWWWWWWWWWA.phaistos  clean_AYYYYYYYYYYA.charmm  clean_AYYYYYYYYYYA.phaistos  (+2 more)
test/parameters/: eef1sb_energy.inp  param_all36_eef1sb.prm  solvpar_eef1sb.inp  top_all36_prot_eef1sb.rtf
test/proteins/: clean_apo_lfabp.charmm  clean_apo_lfabp.phaistos  clean_ci2.charmm  clean_ci2.phaistos  clean_ff_domain.charmm  clean_top7.charmm  (+11 more)
(+1181 files in other folders)
